{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 39,
  "lineage": "4699edc8-44f6-0e1e-40a4-48c28df663cf",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:security-group/sg-0c9979f7ed7fc12d6",
            "description": "Permitir trafego de saida para ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9979f7ed7fc12d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-cluster-master-sg",
            "name_prefix": "",
            "owner_id": "694517737476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-public-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-public-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4081550848",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9979f7ed7fc12d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2734208928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9979f7ed7fc12d6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089b2489e241226d3",
            "association_id": "eipassoc-02b0683990181a179",
            "domain": "vpc",
            "id": "eipalloc-089b2489e241226d3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f6218f7183c4a43a",
            "private_dns": "ip-10-0-8-134.us-east-2.compute.internal",
            "private_ip": "10.0.8.134",
            "public_dns": "ec2-3-138-210-142.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.210.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-cluster-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:internet-gateway/igw-080656267aafe1ce2",
            "id": "igw-080656267aafe1ce2",
            "owner_id": "694517737476",
            "tags": {
              "Name": "eks-cluster-internet-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-internet-gateway",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089b2489e241226d3",
            "connectivity_type": "public",
            "id": "nat-04a2f6cfc8b46411e",
            "network_interface_id": "eni-0f6218f7183c4a43a",
            "private_ip": "10.0.8.134",
            "public_ip": "3.138.210.142",
            "subnet_id": "subnet-0b4d3beb96a51c5e4",
            "tags": {
              "Name": "eks-cluster-nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-nat-gateway",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_eip",
            "module.network.aws_subnet.public_subnet_2a",
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b964c7b71b7a883d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04a2f6cfc8b46411e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b964c7b71b7a883d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_2a",
            "module.network.aws_vpc.vpc_cluster",
            "module.network.aws_eip.vpc_eip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080656267aafe1ce2",
            "id": "r-rtb-09ebca7c77f26ba1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ebca7c77f26ba1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:route-table/rtb-09ebca7c77f26ba1b",
            "id": "rtb-09ebca7c77f26ba1b",
            "owner_id": "694517737476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080656267aafe1ce2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-cluster-public-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-public-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:route-table/rtb-0b964c7b71b7a883d",
            "id": "rtb-0b964c7b71b7a883d",
            "owner_id": "694517737476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a2f6cfc8b46411e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-cluster-private-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-private-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7cc2ed264bbd0b",
            "route_table_id": "rtb-09ebca7c77f26ba1b",
            "subnet_id": "subnet-0b4d3beb96a51c5e4"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_2a"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f7883a95457f6bf",
            "route_table_id": "rtb-09ebca7c77f26ba1b",
            "subnet_id": "subnet-08a66dbcb8af74382"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_2c",
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:subnet/subnet-0425d5cb7c9444eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0425d5cb7c9444eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694517737476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-private-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-private-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:subnet/subnet-08b426ad9bd2fce47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b426ad9bd2fce47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694517737476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-private-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-private-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:subnet/subnet-0b4d3beb96a51c5e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d3beb96a51c5e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "694517737476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-public-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-public-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:subnet/subnet-08a66dbcb8af74382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a66dbcb8af74382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "694517737476",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-cluster-public-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-public-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d11e6d74abaff5eb"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694517737476:vpc/vpc-0d11e6d74abaff5eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7829642a9ffd0fa",
            "default_route_table_id": "rtb-0be12aaae597c96e3",
            "default_security_group_id": "sg-05062d3b34f73723e",
            "dhcp_options_id": "dopt-18f00f73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d11e6d74abaff5eb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be12aaae597c96e3",
            "owner_id": "694517737476",
            "tags": {
              "Name": "eks-cluster-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}